--- a/views/default.html
+++ b/views/default.html
@@ -3,11 +3,11 @@
 {{/yield-styles}}
 
 <div class='pop' style='display:block' id='start'><div class='popinner'>
-  <h2>Välkommen till skattjakten!</h2>
-  <h3>Klicka på ditt namn</h3>
+  <h2>Jul 2016!</h2>
+  <h2>Välkommen till samma gamla skattjakt!</h2>
+  <p>I år är det bara du som får en skattjakt. Men du kanske kan behöva ta hjälp av dina systrar. Och skatten innehåller julklappar till er alla tre.</p>
+  <h3>Klicka på ditt namn för att börja</h3>
   <p>&nbsp;</p>
-  <p><a href='/jakt/?p=Freja' onfocus='this.blur()'>Freja</a></p>
-  <p><a href='/jakt/?p=Selma' onfocus='this.blur()'>Selma</a></p>
   <p><a href='/jakt/?p=Ella' onfocus='this.blur()'>Ella</a></p>
   <div id='tomte1'><img src='/gfx/tomte_01.png' /></div>
 </div></div>
