--- a/views/default.html
+++ b/views/default.html
@@ -1,13 +1,13 @@
 {{#yield-styles}}
-  <link rel="stylesheet" media="screen,print" type="text/css" href="/css/default.css" />
+  <link rel="stylesheet" type="text/css" href="/css/default.css" />
 {{/yield-styles}}
 
-<div class='pop' style='display:block' id='start'><div class='popinner'>
-  <h2>Jul 2016!</h2>
-  <h2>Välkommen till samma gamla skattjakt!</h2>
-  <p>I år är det bara du som får en skattjakt. Men du kanske kan behöva ta hjälp av dina systrar. Och skatten innehåller julklappar till er alla tre.</p>
+<div class='pop start'><div class='popinner'>
+  <h3>Kanske för sista gången...</h3>
+  <h2>Julskattjakt 2017!</h2>
   <h3>Klicka på ditt namn för att börja</h3>
   <p>&nbsp;</p>
-  <p><a href='/jakt/?p=Ella' onfocus='this.blur()'>Ella</a></p>
-  <div id='tomte1'><img src='/gfx/tomte_01.png' /></div>
+  <p><a class='button' href='/jakt/?p=Freja'>Freja</a></p>
+  <p><a class='button' href='/jakt/?p=Selma'>Selma</a></p>
+  <p><a class='button' href='/jakt/?p=Ella'>Ella</a></p>
 </div></div>
