--- a/views/layout.html
+++ b/views/layout.html
@@ -7,14 +7,12 @@
     <title>God jul!</title>
     <link rel='stylesheet' href='/css/base.css' />
     {{{yield-styles}}}
-    <script type="text/javascript" src="/js/jquery-1.3.2.js"></script>
+    <script type="text/javascript" src="/js/jquery-1.11.2.min.js"></script>
     {{{yield-scripts}}}
   </head>
   <body>
-    <div id='maindiv'>
-      <div id="contentarea">
-        {{{yield}}}
-      </div>
+    <div class="contentarea">
+      {{{yield}}}
     </div>
   </body>
 </html>
