--- a/views/jakt.html
+++ b/views/jakt.html
@@ -22,6 +22,7 @@
   <div class='popinner'>
     <h2></h2>
     <h3></h3>
+    <img class='qimg' />
     <p><input class="answer" type='text' /></p>
     <p><a class='button answer'>Svara</a></p>
     <div><img src='/gfx/tomte_04_right.png' /></div>
