Sofia first checkin

--- a/views/default.html
+++ b/views/default.html
@@ -3,11 +3,8 @@
 {{/yield-styles}}
 
 <div class='pop start'><div class='popinner'>
-  <h3>Kanske för sista gången...</h3>
-  <h2>Julskattjakt 2017!</h2>
-  <h3>Klicka på ditt namn för att börja</h3>
+  <h2>God jul Mamma/Sofia!</h2>
+  <h3>Lös skattjakten!<br />Du kan behöva hjälp av familjemedlemmar. Men då måste du betala med en kram eller puss!<br />Lycka till!</h3>
   <p>&nbsp;</p>
-  <p><a class='button' href='/jakt/?p=Freja'>Freja</a></p>
-  <p><a class='button' href='/jakt/?p=Selma'>Selma</a></p>
-  <p><a class='button' href='/jakt/?p=Ella'>Ella</a></p>
+  <p><a class='button' href='/jakt/?p=Sofia'>Börja</a></p>
 </div></div>
