--- a/views/tjejer.html
+++ b/views/tjejer.html
@@ -1,6 +1,6 @@
 <div class='pop start'><div class='popinner'>
   <h2>God jul tjejer!</h2>
-  <h3>I år blir det bara två frågor.<br />Ni får lösa dem med hjälp av varandra :-)<br />Lycka till!</h3>
+  <h3>I år blir det bara två frågor.<br />Lycka till! :-)</h3>
   <p>&nbsp;</p>
   <p><a class='button' href='/jakt/?p=Freja'>Freja</a></p>
   <p><a class='button' href='/jakt/?p=Selma'>Selma</a></p>
