--- a/views/default.html
+++ b/views/default.html
@@ -1,6 +1,7 @@
 <div class='pop start'><div class='popinner'>
-  <h2>God jul Mamma/Sofia!</h2>
-  <h3>Lös skattjakten!<br />Du kan behöva hjälp av familjemedlemmar. Men då måste du betala med en kram eller puss!<br />Lycka till!</h3>
+  <h2>God jul!</h2>
   <p>&nbsp;</p>
-  <p><a class='button' href='/jakt/?p=Sofia'>Börja</a></p>
+  <p><a class='button' href='/freja'>Freja</a></p>
+  <p><a class='button' href='/selma'>Selma</a></p>
+  <p><a class='button' href='/ella'>Ella</a></p>
 </div></div>
